# docscan

./: .gitignore  main.py  pyproject.toml
docscan/processing/: dewarp.py  rectify.py
docscan/services/: pdf_generator.py
