[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "dotenv>=0.9.9",
    "fpdf>=1.7.2",
    "google-genai>=1.46.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "streamlit>=1.50.0",
    "streamlit-webrtc>=0.63.4",
    "sympy>=1.14.0",
]
